# MoneyMinds

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
moneyminds/: __init__.py  api.py  cli.py  config.py  database.py  model.py
tests/: test_database.py  test_model.py
