[tool.poetry]
name = "moneyminds"
version = "0.1.0"
description = ""
authors = ["Eduardo Machado <eduardoshy1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.8"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"


[tool.taskipy.tasks]
lint = "black . && isort ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=moneyminds -vv"
post_test = "coverage html"
